@@ -1,6 +1,6 @@
 SUBDIRS = src
 dist_doc_DATA = README NEWS
 
-EXTRA_DIST = alpinkoordinaten.dat
+EXTRA_DIST = gipfel.dat
 gpsdir = $(datadir)/gipfel
-gps_DATA = alpinkoordinaten.dat
+gps_DATA = gipfel.dat
